--- a/src/sass/sections/_footer.scss
+++ b/src/sass/sections/_footer.scss
@@ -17,7 +17,7 @@
             width: 300px;
             padding: 0 10px;
             margin: 0 auto;
-            outline: 1px solid red;
+            outline: 1px solid red hidden;
           
             @media screen and (min-width: 768px) {
               width: 768px;
