--- a/src/sass/sections/_footer.scss
+++ b/src/sass/sections/_footer.scss
@@ -28,6 +28,24 @@
           }
     }
 
+        &__container {
+
+            width: 300px;
+            padding: 0 10px;
+            margin: 0 auto;
+            outline: 1px solid red hidden;
+          
+            @media screen and (min-width: 768px) {
+              width: 768px;
+              padding: 0 30px;
+            }
+          
+            @media screen and (min-width: 1320px) {
+              width: 1320px;
+              padding: 0 20px;
+            }
+          }
+
     &__boxes {
         display: flex;
         
