--- a/src/sass/sections/_header.scss
+++ b/src/sass/sections/_header.scss
@@ -3,21 +3,24 @@
   background-color: #191919;
   position: fixed;
   width: 100%;
-  overflow: scroll;
   top: 0;
   left: 0;
   z-index: 999;
+  box-shadow: 0px 20px 80px 0px #000;
 
  @media screen and (min-width: 320px) {
   padding-top: 30px;
+  padding-bottom: 30px;
  }
 
   @media screen and (min-width: 768px) {
-    padding-top: 50;
+    padding-top: 50px;
+    padding-bottom: 50px;
   }
 
   @media screen and (min-width: 1320px) {
     padding-top: 64px;
+    padding-bottom: 64px;
   }
 
   &__box {
